Accounts: view,create user(customer&employee)

--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -74,27 +74,22 @@
                             </div>
                         </li>
 
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                <i class="far fa-file-alt"></i>
+                                <i class="far fa-user"></i>
+                                
                                 <span>
-                                    Reports <i class="fas fa-angle-down"></i>
+                                    Accounts <i class="fas fa-angle-down"></i>
                                 </span>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Daily Report</a>
-                                <a class="dropdown-item" href="#">Weekly Report</a>
-                                <a class="dropdown-item" href="#">Yearly Report</a>
+                                <a class="dropdown-item" href="/dashboard/accounts/customer">Customers</a>
+                                <a class="dropdown-item" href="/dashboard/accounts/employee">Employee</a>
                             </div>
                         </li>
                     
-                        <li class="nav-item">
-                            <a class="nav-link" href="/dashboard/accounts">
-                                <i class="far fa-user"></i>
-                                Accounts
-                            </a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
