--- a/templates/01-create-deals.html
+++ b/templates/01-create-deals.html
@@ -70,7 +70,7 @@
               </div>
 
           <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block text-uppercase">Add Product Now</button>
+            <button type="submit" class="btn btn-primary btn-block text-uppercase">Create New Deal</button>
           </div>
         </form>
         </div>
