Dashboard: Admin validation for all pages

--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -108,7 +108,7 @@
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link d-block" href="/dashboard/login">
+                            <a class="nav-link d-block" href="/dashboard/logout">
                                 {{user.first_name}}, <b>Logout</b>
                             </a>
                         </li>
