--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Product Admin - Dashboard HTML Template</title>
+    <title>Product Admin - Dashboard</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
     <!-- https://fonts.google.com/specimen/Roboto -->
     <link rel="stylesheet" href="{% static 'dashboard/css/fontawesome.min.css' %}">
@@ -172,6 +172,7 @@
             });
         })
     </script>
+    {% block chartjs %}{% endblock chartjs %}
 </body>
 
 </html>
