--- a/templates/01-admin-base.html
+++ b/templates/01-admin-base.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto h-100">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link active" href="/dashboard">
                                 <i class="fas fa-tachometer-alt"></i>
                                 Dashboard
                                 <span class="sr-only">(current)</span>
@@ -122,8 +122,16 @@
                     </ul>
                 </div>
             </div>
-
         </nav>
+
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible" role="alert" style="text-align: center;">
+            {{message}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
         
         {% block content %} {% endblock %}
 
